--- a/AngularJS_Spring_MVC/WebContent/WEB-INF/web.xml
+++ b/AngularJS_Spring_MVC/WebContent/WEB-INF/web.xml
@@ -2,45 +2,78 @@
 <web-app id="WebApp_ID" version="3.0"
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-	<display-name>AngularJS_Spring_MVC</display-name>
+	
+	<display-name>Loja</display-name>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
-	
-	<!-- 
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param>
+
+	<filter>
+		<filter-name>conexaoFilter</filter-name>
+		<filter-class>com.spring.angular.filter.FilterOpenSessionInView</filter-class>
+	</filter>
+
+	<filter>
+		<filter-name>encoding-filter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>ISO-8859-1</param-value>
+		</init-param>
+	</filter>
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>encoding-filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>conexaoFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<listener>
+		<listener-class>com.spring.angular.listener.ContextLoaderListenerCaixakiUtils</listener-class>
+	</listener>
+
+	<!-- Trabalhando com Servlets -->
+	<listener>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+	</listener>
+
+	<resource-ref>
+		<description>DataSource datasouce</description>
+		<res-ref-name>jdbc/datasouce</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
+	<!-- Processar uma solicitação da Web -->
 	<servlet>
-		<servlet-name>PegarResposta</servlet-name>
-		<servlet-class>servlet.PegarResposta</servlet-class>
+		<servlet-name>spring-servlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
+
 	<servlet-mapping>
-		<servlet-name>PegarResposta</servlet-name>
+		<servlet-name>spring-servlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
- 	-->
-	
-	  
-	<servlet>
-		<servlet-name>AngularJS_Spring_MVC</servlet-name>
-		<servlet-class>servlet.PegarRespostaJson</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>AngularJS_Spring_MVC</servlet-name>
-		<url-pattern>/pessoa</url-pattern>
-	</servlet-mapping>
-	
-	 <!-- 
-	<servlet>
-		<servlet-name>Pegar Resposta Json</servlet-name>
-		<servlet-class>servlet.PegarRespostaJson</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Pegar Resposta Json</servlet-name>
-		<url-pattern>/AngularJS_Spring_MVC</url-pattern>
-	</servlet-mapping>
-	 -->
+
 </web-app>
