--- a/AngularJS_Spring_MVC/WebContent/WEB-INF/web.xml
+++ b/AngularJS_Spring_MVC/WebContent/WEB-INF/web.xml
@@ -27,8 +27,7 @@
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
 		<init-param>
 			<param-name>encoding</param-name>
-			<!-- <param-value>UTF-8</param-value> -->
-			<param-value>ISO-8859-1</param-value>
+			<param-value>UTF-8</param-value>
 		</init-param>
 	</filter>
 
