--- a/AngularJS_Spring_MVC/WebContent/WEB-INF/web.xml
+++ b/AngularJS_Spring_MVC/WebContent/WEB-INF/web.xml
@@ -14,6 +14,7 @@
 		<param-value>
 			/WEB-INF/applicationContext.xml
 			/WEB-INF/spring-servlet-servlet.xml
+			/WEB-INF/applicationContext-security.xml
 		</param-value>
 	</context-param>
 
@@ -27,12 +28,10 @@
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
 	</filter>
 
-	<!-- 
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
-	 -->
 
 	<filter-mapping>
 		<filter-name>encoding-filter</filter-name>
@@ -43,13 +42,11 @@
 		<filter-name>conexaoFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-	<!-- 
+ 
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	 -->
 
 	<listener>
 		<listener-class>com.spring.angular.listener.ContextLoaderListenerAngularjsSpringRestFullUtils</listener-class>
